--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
     <div class="card">
         <div class="card_header">
             <div class="content">
-                <h1>Welcome to AbleTest</h1>
+                <h1>Welcome to StressTest</h1>
                 <p>
                     Take this questionnaire designed by <b>AbleAlly</b> with Experts to know your stress level.
                 </p>
                 <h1>Kindly Note</h1>
 
                 <p>
-                    .  Please dont click  back while taking the test.
+                    .  Please dont click back while taking the test.
                 </p>
                 <p>
                     . This a MCQ based self assessment with options ranging from Most Likely to Never. So choose options
                     accrodingly.
                 </p>
                 <p>
-                    . By the end of the test,you will receive a certificate based on the ctress level.
+                    . By the end of the test,you will receive a certificate based on the stress level.
                 </p>
                 <p>
                   . Kindly answer "as is" and not how you want it to be! All the Best!
